presentation materials checkin

--- a/base/trunk/server/webapp/site/index.html
+++ b/base/trunk/server/webapp/site/index.html
@@ -20,7 +20,7 @@
 <p>
 <a href="http://www.geotracing.com/gt">[TraceLand]</a>&nbsp;&nbsp;
 <a href="mobitracer.html">[MobiTracer]</a>&nbsp;&nbsp;
-<a href="pres1/index.html">[Presentation]</a>&nbsp;&nbsp;
+<a href="presentation/index.html">[Presentation]</a>&nbsp;&nbsp;
 <a href="wiki">[Documentation]</a>&nbsp;&nbsp;
 </p>
 <hr/>
@@ -76,7 +76,7 @@ to a wealth of applications like map-creation, geodrawing,
 playing back routes, geo/mobile-gaming etc.
 </p>
 <p>
-Through the (planned) <b><i>WebEditor</i></b> personal tracks can also be managed.
+Through the <b><i>WebEditor</i></b> personal tracks can also be managed.
 For example, you may have a handheld GPS (say a Garmin) that logs tracks for you.
 You may export those tracks to GPX and upload them to the server. Be sure
 to add timestamping info. In addition you may submit e.g photo's taken with a digital camera.
