--- a/base/trunk/server/webapp/site/mobitracer.html
+++ b/base/trunk/server/webapp/site/mobitracer.html
@@ -21,7 +21,7 @@
 <a href="index.html">[Home]</a>&nbsp;&nbsp;
 <a href="http://www.geotracing.com/gt">[TraceLand]</a>&nbsp;&nbsp;
 <a href="mobitracer.html">[MobiTracer]</a>&nbsp;&nbsp;
-<a href="pres1/index.html">[Presentation]</a>&nbsp;&nbsp;
+<a href="presentation/index.html">[Presentation]</a>&nbsp;&nbsp;
 <a href="wiki">[Documentation]</a>&nbsp;&nbsp;
 <!-- <a href="technical.html">[TECH]</a>&nbsp;&nbsp;
 <a href="albums.html">[ALBUMS]</a>&nbsp;&nbsp;
