--- a/base/trunk/server/webapp/site/index.html
+++ b/base/trunk/server/webapp/site/index.html
@@ -26,12 +26,13 @@
 <hr/>
 
 <div id="highlitebox">
-	<p>During July 20-23, 2006 <a href="http://www.waag.org/project/futuresonic">Waag Society</a> will
-	be reporting live from the <a href="http://www.futuresonic.com">Futuresonic Festival</a> in Manchester UK using
+	<p>During Sept 11-15, 2006 Just will
+	be reporting live from the <a href="http://www.foss4g2006">FOSS4G Conference</a> in Lausanne, Switzerland
+		using
 	GeoTracing.</p>
-	<p><a href="http://www.geotracing.com/gt/?cmd=live&user=waagsociety&zoom=16&map=streets">
-		<strong>&lt;&lt; Follow the tracing-reporters Ronald and Aske live
-		from Futuresonic &gt;&gt;</strong></a></p>
+	<p><a href="http://www.geotracing.com/gt/?cmd=live&user=just&zoom=16&map=streets">
+		<strong>&lt;&lt; Follow the Just live
+		from FOSS4G &gt;&gt;</strong></a>. </p>
 
 </div>
 <h2>About</h2>
