sense of brainport website updates

--- a/app/sobp/trunk/server/webapp/inc-login.html
+++ b/app/sobp/trunk/server/webapp/inc-login.html
@@ -1,4 +1,5 @@
-  <div class="teksttitel">Inloggen</div> 
+ <div class="nieuwsbericht">
+  <div class="nieuwsberichttitel">Inloggen</div>
   <p>Als je deelnemer bent kun je hier inloggen.</p>
   <p>
   <form id="loginform" name="loginform" method="post" action="control.jsp?cmd=login">
@@ -10,9 +11,11 @@
 		 	<td>paswoord</td><td><input name="password" id="password" type="password" /></td>
 		</tr>
 		<tr>
-			<td colspan="2"><input type="submit" name="submit" value="Login"/></td>
+			<td>&nbsp;</td><td><input type="submit" name="submit" value="Login"/></td>
 		</tr>
 	</table>
   </form>
   </p>
+</div>
+
 
