--- a/app/sobp/trunk/server/webapp/static-layout-header.html
+++ b/app/sobp/trunk/server/webapp/static-layout-header.html
@@ -4,6 +4,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"/>
 	<title>sense of brainport</title>
 	<link href="css/brainport.css" rel="stylesheet" type="text/css"/>
+	<script type="text/javascript" src="lib/DHTML.js"></script>
 </head>
 
 <body>
@@ -14,10 +15,10 @@
 	<td colspan="2">&nbsp;</td>
 </tr>
 <tr>
-	<td width="170"><img src="images/focus.jpg" alt="veld" width="150" height="100" hspace="0" vspace="0"
+	<td width="170"><img src="images/focus.jpg" alt="techniek" width="150" height="100" hspace="0" vspace="0"
 						 class="imagekader"/></td>
-	<td width="170"><img src="images/stoel.jpg" alt="maninstoel" width="150" height="100" class="imagekader"/></td>
-	<td width="170"><img src="images/maninstreet.jpg" alt="phileas" width="150" height="100"
+	<td width="170"><img src="images/stoel.jpg" alt="kusbuswoningen" width="150" height="100" class="imagekader"/></td>
+	<td width="170"><img src="images/maninstreet.jpg" alt="HTC" width="150" height="100"
 						 class="imagekaderlichtgrijs"/></td>
 	<td width="320">
 <!--		<div class="navtekst"><a href="http://www.senseofthecity.nl">sense of the city</a></div>  -->
