added animation when XHR is busy

--- a/base/trunk/server/webapp/site/index.html
+++ b/base/trunk/server/webapp/site/index.html
@@ -26,13 +26,15 @@
 <hr/>
 
 <div id="highlitebox">
-	<p>During Sept 11-15, 2006 Just will
-	be reporting live from the <a href="http://www.foss4g2006">FOSS4G Conference</a> in Lausanne, Switzerland
-		using
-	GeoTracing.</p>
-	<p><a href="http://www.geotracing.com/gt/?cmd=live&user=just&zoom=16&map=streets">
-		<strong>&lt;&lt; Follow the Just live
-		from FOSS4G &gt;&gt;</strong></a>. </p>
+	<p>During Sept 12-14, 2006 Just has been
+		tracing live from the
+		<a href="http://www.foss4g2006">FOSS4G Conference</a> in Lausanne,
+		Switzerland. Below are the tracks/photo's </p>
+	<p>
+	<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1731700&user=just&zoom=13&map=map">FOSS4G - sept 12, 2006</a><br/>
+	<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1737880&user=just&zoom=13&map=map">FOSS4G - sept 13, 2006</a><br/>
+	<a href="http://www.geotracing.com/gt/?cmd=showtrack&id=1744228&user=just&zoom=13&map=map">FOSS4G - sept 14, 2006 (+social event)</a><br/>
+    </p>
 
 </div>
 <h2>About</h2>
