--- a/base/trunk/server/webapp/site/mobitracer.html
+++ b/base/trunk/server/webapp/site/mobitracer.html
@@ -95,6 +95,7 @@ Basically you are managing tracklogs that are kept on the server.
    <li>SelectGPS - find and pair your Bluetooth GPS to the phone</li>
     <li>Keys 1 through 5 -  set the "RoadRating" e.g. asphalt rating (1=worst, 5=best)</li>
    <li>Show Map - view your location on a (Google) map (experimental)</li>
+	<li>Account - view/change your account settings</li>
  <li>Quit - exit MobiTracer app</li>
  </ul>
 </p>
