just some config changes for new system

--- a/base/trunk/server/webapp/site/index.html
+++ b/base/trunk/server/webapp/site/index.html
@@ -53,6 +53,7 @@ The following applications have been or are being developed with GeoTracing.
 <a href="http://www.geotracing.com/gt">TraceLand</a> - the GeoTracing testbed application<br>
 <a href="http://www.geoskating.com">GeoSkating</a> - create media-annotated skate-maps<br>
 <a href="http://www.senseofthecity.nl">Sense of the City</a> - civilians trace Eindhoven<br>
+<a href="http://www.senseofbrainport.nl">Sense of Brainport</a> - tracing in south of Netherlands<br>
 <a href="http://www.bliin.com">Bliin</a> - navigating experiences (in progress)<br>
 <a href="http://www.geosailing.com">GeoSailing</a> - create media-annotated sailing-tracks<br>
 <a href="http://www.geobiking.com">GeoBiking</a> - create media-annotated bicycle tracks<br>
