--- a/app/walkandplay/trunk/client/web/temp.html
+++ b/app/walkandplay/trunk/client/web/temp.html
@@ -4,7 +4,7 @@
 <!-- <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"> -->
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml">
 <head>
-<title>GeoTracing, loading please wait....</title>
+<title>GeoTracing, loading please wait.</title>
 <link rel="stylesheet" type="text/css" href="css/widget.css"/>
 <link rel="stylesheet" type="text/css" href="css/gtwidget.css"/>
 <link rel="stylesheet" type="text/css" href="css/gtapp.css"/>
